load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/hulkholden/gazellerepro
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-prune",
    ],
    command = "update-repos",
)

go_library(
    name = "gazellerepro_lib",
    srcs = ["main.go"],
    importpath = "github.com/hulkholden/gazellerepro",
    visibility = ["//visibility:private"],
    deps = ["@org_golang_x_exp//slices"],
)

go_binary(
    name = "gazellerepro",
    embed = [":gazellerepro_lib"],
    visibility = ["//visibility:public"],
)
